users and login

--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -13,3 +13,5 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
 					a.nav-link href="#" Services
 				li.nav-item
 					a.nav-link href="#" Contact
+				li.nav-item
+					a.nav-link href="login" Login
