--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,7 +1,7 @@
 <!-- Navigation -->
 nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
 	.container
-	  	a.navbar-brand href="#" E-Z Access Event Planner
+	  	a.navbar-brand href="/" E-Z Access Event Planner
 	  	
 	  	div.collapse.navbar-collapse id="navbarResponsive"
 			ul.navbar-nav.ml-auto
