logging out and more

--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -13,5 +13,9 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
 					a.nav-link href="#" Services
 				li.nav-item
 					a.nav-link href="#" Contact
-				li.nav-item
-					a.nav-link href="login" Login
+				- if logged_in?
+					li.nav-item
+						a.nav-link href="logout" Logout
+				- else	
+					li.nav-item
+						a.nav-link href="login" Login
