--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -6,7 +6,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
 	  	div.collapse.navbar-collapse id="navbarResponsive"
 			ul.navbar-nav.ml-auto
 		  		li.nav-item.active
-					a.nav-link href="#" Home
+					a.nav-link href="/" Home
 				li.nav-item
 					a.nav-link href="#" About
 				li.nav-item
