--- a/app/views/welcome/index.slim
+++ b/app/views/welcome/index.slim
@@ -1,3 +1,10 @@
 .row
-	.col
-		p Welcome to E-Z Access Event Planner where we put your needs first
+	.col.pt-5
+		h1 E-Z Access Event Planner where we put your needs first
+		br
+		h2 Website is under construction!
+		h4 Features that curently work:
+		ul
+			li Creating a new user
+			li Logging in/creating session
+			li Logging out/destroying session
