--- a/app/views/layouts/_error_messages.slim
+++ b/app/views/layouts/_error_messages.slim
@@ -1,7 +1,6 @@
-- if @user.erros.any?
-	.#error_explanation
-		.alert.alert-danger The form contains 
-		= pluralize(@user.errors.count, "error")
+- if @user.errors.any?
+	. id="error_explanation"
+		.alert.alert-danger The form contains #{pluralize(@user.errors.count, "error")}
 		ul
 		- @user.errors.full_messages.each do |msg|
 			li
