--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -5,7 +5,7 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
 	  	
 	  	div.collapse.navbar-collapse id="navbarResponsive"
 			ul.navbar-nav.ml-auto
-		  		li.nav-item.active
+		  		li.nav-item
 					a.nav-link href="/" Home
 				li.nav-item
 					a.nav-link href="#" About
@@ -14,6 +14,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
 				li.nav-item
 					a.nav-link href="#" Contact
 				- if logged_in?
+					li.nav_item
+						= link_to "My Profile", user_path(current_user), :class => "nav-link"
 					li.nav-item
 						= link_to "Log out", logout_path, method: :delete, :class => "nav-link"
 				- else	
