--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -8,11 +8,14 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
 		  		li.nav-item
 					a.nav-link href="/" Home
 				li.nav-item
-					a.nav-link href="#" About
+					a.nav-item
+						= link_to "About", about_path, :class => "nav-link"
 				li.nav-item
-					a.nav-link href="#" Services
+					a.nav-item
+						= link_to "Services", services_path, :class => "nav-link"
 				li.nav-item
-					a.nav-link href="#" Contact
+					a.nav-item
+						= link_to "Contact Us", contact_path, :class => "nav-link"
 				- if logged_in?
 					li.nav_item
 						= link_to "My Profile", user_path(current_user), :class => "nav-link"
