--- a/app/views/welcome/index.slim
+++ b/app/views/welcome/index.slim
@@ -7,7 +7,8 @@
 		ul
 			li Creating a new user
 			li Logging in/creating session
-			li Show user page to verify that users exist (/user/:id)
+			li User profile page to verify that users exist (/user/:id)
 			ul
 				li Will pop up after logging in or creating a new user
+				li Link to page to edit user information
 			li Logging out/destroying session
