fixed edit profile bug

--- a/app/views/users/edit.slim
+++ b/app/views/users/edit.slim
@@ -2,8 +2,9 @@
 h1 Update your profile
 .row
   .col-md-6.col-md-offset-3
-    label Vendor
-    input.form-control#disabledTextInput type='text' readonly='true' value='#{user_vendor(current_user).name}'
+    - if is_vendor?(@user)
+      label Vendor
+      input.form-control#disabledTextInput type='text' readonly='true' value='#{user_vendor(current_user).name}'
     = form_for(@user) do |f|
       = render 'layouts/error_messages'
 
