static pages and services page

--- a/app/views/welcome/about.slim
+++ b/app/views/welcome/about.slim
@@ -1,2 +1,4 @@
 - provide(:title,@title)
 h3 = @title
+
+p E-Z Access Event Planner connects you to hundreds of vendors to seamlessly create a package perfect for your event. Let us do the hard work for you while you make memories to trasure for the rest of your life!
