--- a/app/views/welcome/index.slim
+++ b/app/views/welcome/index.slim
@@ -5,10 +5,12 @@
 		h2 Website is under construction!
 		h4 Features that curently work:
 		ul
-			li Creating a new user
+			li Creating a new user (vendor or customer)
 			li Logging in/creating session
 			li User profile page to verify that users exist (/user/:id)
 			ul
 				li Will pop up after logging in or creating a new user
 				li Link to page to edit user information
+				li If user is a vendor it will show details about the vendor they work for and the services and price points they have registered with E-Z Access Event Planner
 			li Logging out/destroying session
+			li Submitting a contact us form
