--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -24,3 +24,6 @@ br
 			tr
 				td = f[0].service_name
 				td = f[1]
+				td = link_to "Delete", vendor_to_service_path(f[2]), method: :delete
+	= link_to "Add Vendor Service", new_vendor_to_service_path
+	br
