updated features page

--- a/app/views/welcome/index.slim
+++ b/app/views/welcome/index.slim
@@ -12,5 +12,11 @@
 				li Will pop up after logging in or creating a new user
 				li Link to page to edit user information
 				li If user is a vendor it will show details about the vendor they work for and the services and price points they have registered with E-Z Access Event Planner
+				ul
+					li User can delete services
+					li User can update service prices
 			li Logging out/destroying session
 			li Submitting a contact us form
+			li Services page will populate with all available services
+			ul
+				li If a vendor removes a service and there is no longer at least one vendor with that service, the service will be deleted as well
