--- a/app/views/welcome/index.slim
+++ b/app/views/welcome/index.slim
@@ -6,6 +6,8 @@
 		h4 Features that curently work:
 		ul
 			li Creating a new user (vendor or customer)
+			ul
+				li Passwords are stored as a hash
 			li Logging in/creating session
 			li User profile page to verify that users exist (/user/:id)
 			ul
