--- a/app/views/welcome/contact.slim
+++ b/app/views/welcome/contact.slim
@@ -12,7 +12,7 @@ h6 ezAccessEventPlanners@gmail.com
 	= f.text_field :name, class: 'form-control'
 
 	= f.label :email
-	= f.text_field :email, class: 'form-control'
+	= f.email_field :email, class: 'form-control'
 
 	= f.label :note
 	= f.text_field :note, class: 'form-control'
