--- a/app/views/welcome/index.slim
+++ b/app/views/welcome/index.slim
@@ -17,8 +17,13 @@
 				ul
 					li User can delete services
 					li User can update service prices
+					li User can update vendor profile details
+				li If user isn't a vendor they can register as one
+				ul
+					li If the vendor they register as doesn't exist, one will be created
 			li Logging out/destroying session
 			li Submitting a contact us form
 			li Services page will populate with all available services
 			ul
 				li If a vendor removes a service and there is no longer at least one vendor with that service, the service will be deleted as well
+			li Admin interface
