--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -23,6 +23,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark.fixed-top
 					- if is_admin?
 						li.nav_item
 							= link_to "Admin", admin_path, :class => "nav-link #{'active' if @title == 'Admin'}"
+						li.nav_item
+							= link_to "Events", events_path, :class => "nav-link #{'active' if @title == 'Events'}"
 					li.nav-item
 						= link_to "Log out", logout_path, method: :delete, :class => "nav-link"
 				- else	
